--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,7 @@ build/
 !default.mode1v3
 !default.mode2v3
 !default.perspectivev3
-
+*.xcodeproj
 
 ####
 # Xcode 4 - semi-personal settings, often included in workspaces
